--- a/cryptonews/Base.lproj/Main.storyboard
+++ b/cryptonews/Base.lproj/Main.storyboard
@@ -138,7 +138,7 @@
             </objects>
             <point key="canvasLocation" x="260" y="132.68365817091455"/>
         </scene>
-        <!--News Detail View Controller-->
+        <!--Title-->
         <scene sceneID="VN3-oP-6if">
             <objects>
                 <viewController storyboardIdentifier="NewsDetailViewController" id="hy4-tS-ytW" customClass="NewsDetailViewController" customModule="cryptonews" customModuleProvider="target" sceneMemberID="viewController">
@@ -195,6 +195,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RQt-Rt-2W0"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="iWJ-LK-QjY">
+                        <barButtonItem key="rightBarButtonItem" title="Visit Site" id="gCR-bo-dU2">
+                            <connections>
+                                <action selector="didTapVisitSite:" destination="hy4-tS-ytW" id="oOG-wg-8re"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="authorLabel" destination="KnB-C8-O6o" id="g9S-Ku-Dx3"/>
                         <outlet property="textView" destination="ygk-2g-hTx" id="lzO-41-Nva"/>
@@ -204,6 +212,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WkO-lH-bgB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="924" y="132.68365817091455"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="1JU-B5-kkZ">
+            <objects>
+                <viewController storyboardIdentifier="WebViewController" id="wzN-ey-JvJ" customClass="WebViewController" customModule="cryptonews" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fOk-XJ-fYk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nIp-wG-mv5">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nIp-wG-mv5" firstAttribute="leading" secondItem="nsa-kW-JLd" secondAttribute="leading" id="MhT-AX-bmW"/>
+                            <constraint firstItem="nIp-wG-mv5" firstAttribute="top" secondItem="fOk-XJ-fYk" secondAttribute="top" id="Mhi-Cf-osJ"/>
+                            <constraint firstItem="nIp-wG-mv5" firstAttribute="bottom" secondItem="nsa-kW-JLd" secondAttribute="bottom" id="aEY-na-1Aj"/>
+                            <constraint firstItem="nIp-wG-mv5" firstAttribute="trailing" secondItem="nsa-kW-JLd" secondAttribute="trailing" id="h4M-yT-iKA"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="nsa-kW-JLd"/>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="nIp-wG-mv5" id="Yb6-ta-HPG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2OT-fr-JWL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1628" y="132.68365817091455"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="li2-4s-vqy">
