changed background color on detail view

--- a/cryptonews/Base.lproj/Main.storyboard
+++ b/cryptonews/Base.lproj/Main.storyboard
@@ -179,7 +179,7 @@
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygk-2g-hTx">
                                         <rect key="frame" x="16" y="98" width="343" height="39"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -200,7 +200,7 @@
                                 </constraints>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="a3Q-nW-KEW" firstAttribute="trailing" secondItem="RQt-Rt-2W0" secondAttribute="trailing" id="1Zp-ou-bWg"/>
                             <constraint firstItem="a3Q-nW-KEW" firstAttribute="bottom" secondItem="RQt-Rt-2W0" secondAttribute="bottom" id="GaM-GF-rfP"/>
